// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render a non-inline text element 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
  display: block;
}

<Text
  isInline={false}
  tag="span"
  type="body"
>
  <styled.span
    isInline={false}
    type="body"
  >
    <span
      className="c0"
      type="body"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render a text element as a h1 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

<Text
  isInline={true}
  tag="h1"
  type="body"
>
  <styled.h1
    isInline={true}
    type="body"
  >
    <h1
      className="c0"
      type="body"
    >
      Hello, world!
    </h1>
  </styled.h1>
</Text>
`;

exports[`<Text /> should render an element with colored text 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #F25749;
  font-weight: 400;
}

<Text
  color="#F25749"
  isInline={true}
  tag="span"
  type="body"
>
  <styled.span
    color="#F25749"
    isInline={true}
    type="body"
  >
    <span
      className="c0"
      color="#F25749"
      type="body"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with heading text 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
  color: #424F5C;
  font-weight: 600;
}

<Text
  isInline={true}
  tag="span"
  type="heading"
>
  <styled.span
    isInline={true}
    type="heading"
  >
    <span
      className="c0"
      type="heading"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with heavy text 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 600;
}

<Text
  isInline={true}
  tag="span"
  type="body"
  weight="heavy"
>
  <styled.span
    isInline={true}
    type="body"
    weight="heavy"
  >
    <span
      className="c0"
      type="body"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with small text 1`] = `
.c0 {
  font-size: 14px;
  line-height: 20px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #262D33;
  font-weight: 400;
}

<Text
  isInline={true}
  tag="span"
  type="small"
>
  <styled.span
    isInline={true}
    type="small"
  >
    <span
      className="c0"
      type="small"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with text 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
}

<Text
  isInline={true}
  tag="span"
  type="body"
>
  <styled.span
    isInline={true}
    type="body"
  >
    <span
      className="c0"
      type="body"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;

exports[`<Text /> should render an element with the text converted to uppercase 1`] = `
.c0 {
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  color: #424F5C;
  font-weight: 400;
  text-transform: uppercase;
}

<Text
  isInline={true}
  isUpper={true}
  tag="span"
  type="body"
>
  <styled.span
    isInline={true}
    isUpper={true}
    type="body"
  >
    <span
      className="c0"
      type="body"
    >
      Hello, world!
    </span>
  </styled.span>
</Text>
`;
